@@ -1,4 +1,4 @@
-# LIST OF CHANGES FROM LAST RELEASE:			<$Revision: 1.1493 $>
+# LIST OF CHANGES FROM LAST RELEASE:			<$Revision: 1.1494 $>
 #
 #
 # [Note: This file does not mention every change made to the NetBSD source tree.
@@ -831,3 +831,5 @@ Changes from NetBSD 5.0 to NetBSD 6.0:
 		[jmcneill 20110117]
 	isns(3): Add a library providing iSNS (IETF RFC 4171) protocol
 		support, contributed by Wasabi Systems. [agc 20110117]
+	atactl(8): Fix mislabelled S.M.A.R.T. lifetime temperature record
+		reading. [nisimura 20110119]
